XMLtoCSV/objects/unpackaged/objects/Content_Deployment_vod__c.object
<CustomObject>
    <description>Maintains the relationship between a piece of content and the channel to which it has been deployed.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the content deployment is active and available to be viewed.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the content deployment is no longer referencing available content.</description>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_View_Date_vod__c</fullName>
        <description>Last viewed date of the presentation on the Site.</description>
        <label>Last Viewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multichannel_Content_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Content to be displayed on the Site</description>
        <label>Multichannel Content</label>
        <referenceTo>Multichannel_Content_vod__c</referenceTo>
        <relationshipLabel>Content Deployments</relationshipLabel>
        <relationshipName>Content_Deployments_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Site which displays the presentation</description>
        <label>Site</label>
        <referenceTo>Site_vod__c</referenceTo>
        <relationshipLabel>Content Deployments</relationshipLabel>
        <relationshipName>Content_Deployments_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM</description>
        <externalId>true</externalId>
        <label>Veeva External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>View_Count_vod__c</fullName>
        <description>Total # of views of the presentation on the Site</description>
        <label>View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Content Deployment</label>
    <nameField>
        <displayFormat>CD-{000000000}</displayFormat>
        <label>Content Deployment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Deployments</pluralLabel>
    <recordTypes>
        <fullName>Engage_vod</fullName>
        <active>true</active>
        <description>For the Engage site/presentation relationship</description>
        <label>Engage_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>